--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,11 @@
   </head>
   <body>
     <div class="container">
+      <div class="logo mobileLogo">
+        <h2 id="site-name" class="site-name site-name-front">
+          <a href="#">JEZURO</a>
+        </h2>
+      </div>
       <div class="header-section">
         <div class="menuWrap">
           <div class="menu">
@@ -40,7 +45,7 @@
         </div>
         <div class="logo desktopLogo">
           <h1 id="site-name" class="site-name site-name-front">
-            <a href="https://jezuro.com">JEZURO</a>
+            <a href="#">JEZURO</a>
           </h1>
         </div>
         <div class="cta-wrapper">
@@ -82,7 +87,7 @@
                       </div>
                       <div class="song-title">Bad Mosquitoes</div>
                       <div class="get-it-now">
-                        <a href="https://distrokid.com/hyperfollow/jezero1/bad-mosquitoes" target="_blank">listen now</a>
+                        <a href="https://distrokid.com/hyperfollow/jezuro/cloud-and-tifa" target="_blank">listen now</a>
                       </div>
                     </div>
                   </div>
