--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="logo mobileLogo">
         <h2 id="site-name" class="site-name site-name-front">
-          <a href="#">JEZURO</a>
+          <a href="">JEZURO</a>
         </h2>
       </div>
       <div class="header-section">
@@ -34,8 +34,6 @@
                   <div class="menu-items">
                     <ul>
                       <li><a href="#music">MUSIC</a></li>
-                      <li><a href="#video">VIDEO</a></li>
-                      <li><a href="#about">ABOUT</a></li>
                     </ul>
                   </div>
                 </div>
@@ -45,7 +43,7 @@
         </div>
         <div class="logo desktopLogo">
           <h1 id="site-name" class="site-name site-name-front">
-            <a href="#">JEZURO</a>
+            <a href="https://jezuro.com">JEZURO</a>
           </h1>
         </div>
         <div class="cta-wrapper">
