--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
+
+    <meta name="robots" content="noimageai">
+    <meta name="robots" content="noai">
+    <meta name="keywords" content="Jezuro" />
+    <meta name="description"
+        content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.' />
+
+    <meta property="og:url" content="{{ site.url }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | relative_url }}" />
+    <meta property="og:title" content="Jezuro Official Website" />
+    <meta property="og:description"
+        content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.' />
+    <meta property="og:site_name" content="Jezuro" />
+
+    <meta name="twitter:site" content="{{ site.url }}">
+    <meta name="twitter:url" content="{{ site.url }}">
+    <meta name="twitter:description"
+        content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.'>
+    <meta name="twitter:title" content="Jezuro Official Website">
+    <meta name="twitter:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | relative_url }}" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="{{ site.url }}" />
+
+
     <link rel="stylesheet" href="{{ "/assets/css/icomoon-style.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="{{ "/assets/img/favicon.jpg" | relative_url }}" type="image/x-icon">
   </head>
   <body>
     <div class="container">
