--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
               <li><a href="https://music.apple.com/us/artist/jezuro/1857878337" target="_blank" class="icon-appleinc" data-track="apple-music-ftr" aria-label="icon-appleinc"></a></li>
               <li><a href="https://youtube.com/@jezuromusic" target="_blank" class="icon-youtube" data-track="youtube-ftr" aria-label="icon-youtube"></a></li>
               <li><a href="https://instagram.com/jezuromusic" target="_blank" class="icon-instagram" data-track="instagram-ftr" aria-label="icon-instagram"></a></li>
-              <li><a href="https://faceboook.com/jezuromusic" target="_blank" class="icon-facebook" data-track="facebook-ftr" aria-label="icon-facebook"></a></li>
+              <li><a href="https://facebook.com/jezuromusic" target="_blank" class="icon-facebook" data-track="facebook-ftr" aria-label="icon-facebook"></a></li>
               <li><a href="https://x.com/jezuromusic" target="_blank" class="twt-x" data-track="twitter-ftr" aria-label="icon-twitter"></a></li>
               <li><a href="https://tiktok.com/@jezuromusic" target="_blank" class="icontiktok-tiktok" data-track="tiktok-ftr" aria-label="icon-tiktok"></a></li>
               <!--<li><a href="" target="_blank" class="icon-soundcloud" data-track="soundcloud-ftr" aria-label="soundcloud"></a></li> -->
