--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
     <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | relative_url }}" />
+    <meta property="og:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | absolute_url }}" />
     <meta property="og:title" content="Jezuro Official Website" />
     <meta property="og:description"
         content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.' />
@@ -25,7 +25,7 @@
     <meta name="twitter:description"
         content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.'>
     <meta name="twitter:title" content="Jezuro Official Website">
-    <meta name="twitter:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | relative_url }}" />
+    <meta name="twitter:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | absolute_url }}" />
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="{{ site.url }}" />
 
