--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.' />
     <meta property="og:site_name" content="Jezuro" />
 
-    <meta name="twitter:site" content="{{ site.url }}">
+    <meta name="twitter:site" content="@jezuromusic">
     <meta name="twitter:url" content="{{ site.url }}">
     <meta name="twitter:description"
         content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.'>
@@ -60,6 +60,7 @@
                   <div class="menu-items">
                     <ul>
                       <li><a href="#music">MUSIC</a></li>
+                      <li><a href="#video">VIDEOS</a></li>
                     </ul>
                   </div>
                 </div>
@@ -124,6 +125,56 @@
         </div>
       </div>
 
+
+      <div class="videos-section-wrapper" id="video">
+        <div class="video-section video-section2">
+          <div class="video-carousel">
+            <div class="videocarousel">
+              <div class="owl-carousel owl-theme owl-loaded owl-drag">
+                <div class="owl-stage-outer">
+                  <div class="owl-stage" style="transform: translate3d(-8289px, 0px, 0px); transition: all; width: 33157px;">
+                    <div class="owl-item cloned" style="width: 997.156px; margin-right: 39px;">
+                      <div class="item">
+                        <li>
+                          <div class="videowrap">
+                            <div class="video-container" id="api-container-03">
+                              <div class="videoPlayer" id="ytplayer2" data-video-id="QXkMO_HHq3g"></div>
+                            </div>
+                            <div class="overlay-img" id="overlay-img-2">
+                              <img src="./assets/img/yt-covers/tifa-lyric-yt-cover.jpg" alt="video0">
+                              <div class="video-titles">Cloud and Tifa (Lyric Video)</div>
+                            </div>
+                          </div>
+                        </li>
+                      </div>
+                    </div>
+                    <div class="owl-item cloned" style="width: 997.156px; margin-right: 39px;">
+                      <div class="item">
+                        <li>
+                          <div class="videowrap">
+                            <div class="video-container" id="api-container-03">
+                              <div class="videoPlayer" id="ytplayer2" data-video-id="ZUvzxExwSkc"></div>
+                            </div>
+                            <div class="overlay-img" id="overlay-img-2">
+                              <img src="./assets/img/yt-covers/mosquito-yt-cover.jpg" alt="video0">
+                              <div class="video-titles">Bad Mosquitoes (Official Video)</div>
+                            </div>
+                          </div>
+                        </li>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div>
+                <div class="owl-dots disabled"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
       <div class="footer-section-wrapper">
         <div class="footer-section">
           <div class="socials-section">
@@ -150,5 +201,6 @@
     <script src="https://libraries.wmgartistservices.com/externalJS/jquery-browser-0-1-0-jquery-browser-min.js" type="text/javascript"></script>
     <script src="./assets/js/owl.carousel.js" type="text/javascript"></script>
     <script src="./assets/js/script.js" type="text/javascript"></script>
+    <script src="./assets/js/ytloader.js" type="text/javascript"></script>
   </body>
 </html>
