--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,6 +133,21 @@
               <div class="owl-carousel owl-theme owl-loaded owl-drag">
                 <div class="owl-stage-outer">
                   <div class="owl-stage" style="transform: translate3d(-8289px, 0px, 0px); transition: all; width: 33157px;">
+                    <!--<div class="owl-item cloned" style="width: 997.156px; margin-right: 39px;">
+                      <div class="item">
+                        <li>
+                          <div class="videowrap">
+                            <div class="video-container" id="api-container-03">
+                              <div class="videoPlayer" id="ytplayer2" data-video-id="iUGhCsXL5fs"></div>
+                            </div>
+                            <div class="overlay-img" id="overlay-img-2">
+                              <img src="./assets/img/yt-covers/tifa-lyric-yt-cover.jpg" alt="video0">
+                              <div class="video-titles">Cloud and Tifa</div>
+                            </div>
+                          </div>
+                        </li>
+                      </div>
+                    </div>-->
                     <div class="owl-item cloned" style="width: 997.156px; margin-right: 39px;">
                       <div class="item">
                         <li>
@@ -157,7 +172,7 @@
                             </div>
                             <div class="overlay-img" id="overlay-img-2">
                               <img src="./assets/img/yt-covers/mosquito-yt-cover.jpg" alt="video0">
-                              <div class="video-titles">Bad Mosquitoes (Official Video)</div>
+                              <div class="video-titles">Bad Mosquitoes</div>
                             </div>
                           </div>
                         </li>
@@ -191,7 +206,7 @@
           </div>
           <div class="copyrightWrapper">
             <span class="copyright">
-                ©&nbsp;<span id="year-desk">2026</span>&nbsp;Jezuro
+                ©&nbsp;<span id="year-desk">2026</span>&nbsp;JEZURO
             </span>
           </div>
         </div>
