--- a/assets/css/icomoon-style.css
+++ b/assets/css/icomoon-style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?8bhr6c');
-  src:  url('../fonts/icomoon.eot?8bhr6c#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?8bhr6c') format('truetype'),
-    url('../fonts/icomoon.woff?8bhr6c') format('woff'),
-    url('../fonts/icomoon.svg?8bhr6c#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot');
+  src:  url('../fonts/icomoon.eot#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf') format('truetype'),
+    url('../fonts/icomoon.woff') format('woff'),
+    url('../fonts/icomoon.svg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -55,11 +55,11 @@
 
 @font-face {
   font-family: 'icomoontiktok';
-  src:  url('../fonts/icomoontiktok.eot?40srdf');
-  src:  url('../fonts/icomoontiktok.eot?40srdf#iefix') format('embedded-opentype'),
-    url('../fonts/icomoontiktok.ttf?40srdf') format('truetype'),
-    url('../fonts/icomoontiktok.woff?40srdf') format('woff'),
-    url('../fonts/icomoontiktok.svg?40srdf#icomoontiktok') format('svg');
+  src:  url('../fonts/icomoontiktok.eot');
+  src:  url('../fonts/icomoontiktok.eot#iefix') format('embedded-opentype'),
+    url('../fonts/icomoontiktok.ttf') format('truetype'),
+    url('../fonts/icomoontiktok.woff') format('woff'),
+    url('../fonts/icomoontiktok.svg#icomoontiktok') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -85,11 +85,11 @@
 }
 @font-face {
   font-family: 'twt-x';
-  src:  url('../fonts/twt-x.eot?jjyo3s');
-  src:  url('../fonts/twt-x.eot?jjyo3s#iefix') format('embedded-opentype'),
-    url('../fonts/twt-x.ttf?jjyo3s') format('truetype'),
-    url('../fonts/twt-x.woff?jjyo3s') format('woff'),
-    url('../fonts/twt-x.svg?jjyo3s#twt-x') format('svg');
+  src:  url('../fonts/twt-x.eot');
+  src:  url('../fonts/twt-x.eot#iefix') format('embedded-opentype'),
+    url('../fonts/twt-x.ttf') format('truetype'),
+    url('../fonts/twt-x.woff') format('woff'),
+    url('../fonts/twt-x.svg#twt-x') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
